--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(Protobuf REQUIRED)
 FIND_PACKAGE(KERBEROS REQUIRED)
 FIND_PACKAGE(GSasl REQUIRED)
+FIND_PACKAGE(SSL REQUIRED)
 
 IF(OS_LINUX)
     FIND_PACKAGE(LibUUID REQUIRED)
