partially implemented KMS retrieval

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ FIND_PACKAGE(Protobuf REQUIRED)
 FIND_PACKAGE(KERBEROS REQUIRED)
 FIND_PACKAGE(GSasl REQUIRED)
 FIND_PACKAGE(SSL REQUIRED)
+FIND_PACKAGE(CURL REQUIRED)
 
 IF(OS_LINUX)
     FIND_PACKAGE(LibUUID REQUIRED)
