--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,7 @@ INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${KERBEROS_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GSASL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${SSL_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/mock)
 
 TARGET_LINK_LIBRARIES(libhdfs3-static ${PROTOBUF_LIBRARIES})
@@ -98,12 +99,14 @@ TARGET_LINK_LIBRARIES(libhdfs3-static ${LIBXML2_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-static ${KERBEROS_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-static ${GSASL_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-static ${SSL_LIBRARIES})
+TARGET_LINK_LIBRARIES(libhdfs3-static ${CURL_LIBRARIES})
 
 TARGET_LINK_LIBRARIES(libhdfs3-shared ${PROTOBUF_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-shared ${LIBXML2_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-shared ${KERBEROS_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-shared ${GSASL_LIBRARIES})
 TARGET_LINK_LIBRARIES(libhdfs3-shared ${SSL_LIBRARIES})
+TARGET_LINK_LIBRARIES(libhdfs3-shared ${CURL_LIBRARIES})
 
 SET_TARGET_PROPERTIES(libhdfs3-static PROPERTIES OUTPUT_NAME "hdfs3")
 SET_TARGET_PROPERTIES(libhdfs3-shared PROPERTIES OUTPUT_NAME "hdfs3")
