r=jbliu, update cmake.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(TEST_WORKING_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data/)
-ADD_DEFINITIONS(-DGTEST_LANG_CXX11=0 -Dprivate=public -Dprotected=public -DDATA_DIR="${TEST_WORKING_DIR}/")
+ADD_DEFINITIONS(-DGTEST_LANG_CXX11=0  -Dprotected=public -DDATA_DIR="${TEST_WORKING_DIR}/")
 
 ADD_SUBDIRECTORY(function)
 ADD_SUBDIRECTORY(unit)
@@ -32,7 +32,7 @@ ADD_CUSTOM_TARGET(securetest
 	COMMENT "Run Security Function Test..."
 )
 
-ADD_CUSTOM_TARGET(test 
+ADD_CUSTOM_TARGET(_test
     COMMAND ${CMAKE_MAKE_PROGRAM} unittest || true
     COMMAND ${CMAKE_MAKE_PROGRAM} functiontest || true
     COMMENT "Run All Test..."
