--- a/test/function/CMakeLists.txt
+++ b/test/function/CMakeLists.txt
@@ -66,5 +66,9 @@ TARGET_LINK_LIBRARIES(function ${LIBXML2_LIBRARIES})
 TARGET_LINK_LIBRARIES(function ${KERBEROS_LIBRARIES})
 TARGET_LINK_LIBRARIES(function ${GSASL_LIBRARIES})
 
+TARGET_LINK_LIBRARIES(function ${SSL_LIBRARIES})
+TARGET_LINK_LIBRARIES(function ${CURL_LIBRARIES})
+
+
 SET(function_SOURCES ${function_SOURCES} PARENT_SCOPE)
 
