--- a/test/secure/CMakeLists.txt
+++ b/test/secure/CMakeLists.txt
@@ -65,5 +65,9 @@ TARGET_LINK_LIBRARIES(secure ${LIBXML2_LIBRARIES})
 TARGET_LINK_LIBRARIES(secure ${KERBEROS_LIBRARIES})
 TARGET_LINK_LIBRARIES(secure ${GSASL_LIBRARIES})
 
+TARGET_LINK_LIBRARIES(secure ${SSL_LIBRARIES})
+TARGET_LINK_LIBRARIES(secure ${CURL_LIBRARIES})
+
+
 SET(secure_SOURCES ${secure_SOURCES} PARENT_SCOPE)
 
